# DG-Solver-for-PBTE-with-MFEM

./: .clang-tidy  .clangd  CMakeLists.txt  README.md
Reference Project/: CMakeLists.txt
Reference Project/config/control/: Control.yaml
Reference Project/config/mesh/: cuboid_10x10x10.msh  cuboid_15x15x15.msh  cuboid_16x16x16.msh  cuboid_2x2x2.msh  cuboid_4x4x4.msh  cuboid_5x5x5.msh  cuboid_8x8x8.msh
Reference Project/config/mesh/mesh_generator/: cuboid_mesh.py  cuboid_uniform_mesh.py  generate2DMesh.ipynb  generate_mesh.ipynb
Reference Project/include/DGSolver/: DGSolver.hpp
Reference Project/include/GlobalConfig/: GlobalConfig.hpp
Reference Project/include/PolyFem/: BasisFunctions.hpp  Quadrature.hpp
Reference Project/include/PolyFem/quadpoints/: Quadrature.ipynb  quad2D_1.txt  quad2D_10.txt  quad2D_11.txt  quad2D_12.txt  quad2D_13.txt  quad2D_14.txt  quad2D_2.txt  quad2D_3.txt  quad2D_4.txt  quad2D_5.txt  quad2D_6.txt  quad2D_7.txt  quad2D_8.txt  quad2D_9.txt  quad3D_1.txt  quad3D_10.txt  quad3D_11.txt  quad3D_13.txt  quad3D_14.txt  quad3D_2.txt  quad3D_3.txt  quad3D_4.txt  quad3D_6.txt  quad3D_7.txt  quad3D_8.txt  quad3D_9.txt
Reference Project/include/Polynomial/: Polynomial.hpp
Reference Project/include/SolidAngle/: SolidAngle.hpp
Reference Project/include/SpatialMesh/: Element.hpp  MeshPartitioning copy.hpp  MeshPartitioning.hpp  SpatialMesh.hpp
Reference Project/include/Utility/: math_utils.hpp
Reference Project/include/Validation/: MeshPartitionValidator.hpp
Reference Project/src/: CMakeLists.txt
Reference Project/src/DGSolver/: CMakeLists.txt  PBTE_NonGraySMRT.cpp  PBTE_NonGraySMRT_MPI old.cpp  PBTE_NonGraySMRT_MPI.cpp
Reference Project/src/PhononBTE/: PhononBTE.cpp
Reference Project/src/PhononModel/: CMakeLists.txt  NonGraySMRT.cpp
Reference Project/src/Polynomial/: CMakeLists.txt  Polynomial.cpp
Reference Project/src/SolidAngle/: CMakeLists.txt  SolidAngle.cpp
Reference Project/src/Utility/: CMakeLists.txt  math_utils.cpp
Reference Project/src/Validation/: CMakeLists.txt  MeshPartitionValidator.cpp  TestMeshPartition.cpp
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
config/: config.yaml  si.yaml
config/mesh/: unit-cube-hex.mesh  unit-cube-tet-iso.mesh  unit-square-iso.mesh  unit-square.mesh
dg4pbte_out/Cycle000000/: proc000000.vtu
docs/: implementation_overview.md
include/: AngularQuadrature.hpp  AngularSweepOrder.hpp  ElementIntegrator.hpp  MacroscopicQuantities.hpp  PBTESolver.hpp  PhononProperties.hpp  SpatialMesh.hpp  Utils.hpp  callaway_rta.hpp  cli.hpp  dg_solver.hpp  equilibrium_gray.hpp  gray_sn_steady.hpp  normal_closure.hpp  params.hpp  postprocess.hpp  quadrature_sn.hpp
include/dg/: boundary.hpp  flux_upwind.hpp  transport.hpp
iso_bc_demo/Cycle000000/: proc000000.vtu
output/2D/results/: T_slice.txt
output/dg4pbte_out/Cycle000000/: proc000000.vtu
output/iso_bc_attr/Cycle000000/: proc000000.vtu
output/iso_bc_demo_tol/Cycle000000/: proc000000.vtu
output/iso_bc_demo_tol2/Cycle000000/: proc000000.vtu
output/log/: Tc_all.txt  angles_dim2_np24_gauss_na24_gauss.txt  angles_dim3_np24_gauss_na24_gauss.txt  angles_dim3_tp16_gauss_ap24_gauss.txt  angles_dim3_tp8_gauss_ap16_gauss.txt  angles_dim3_tp8_gauss_ap16_uniform.txt  coeff_all.txt  integrals_all.txt  mesh_unit-cube-hex_p2_dim3.txt  mesh_unit-cube-tet-iso_p1_dim3.txt  mesh_unit-cube-tet-iso_p2_dim3.txt  mesh_unit-cube-tet-iso_p2_dim3_par_r0.txt  mesh_unit-cube-tet-iso_p2_dim3_par_r1.txt  mesh_unit-cube-tet-iso_p2_dim3_par_r2.txt  mesh_unit-cube-tet-iso_p2_dim3_par_r3.txt  mesh_unit-cube-tet-iso_p3_dim3.txt  mesh_unit-cube_p1_dim3.txt  mesh_unit-cube_p2_dim3.txt  mesh_unit-cube_p3_dim3.txt  mesh_unit-square-iso_p1_dim2.txt  mesh_unit-square-iso_p2_dim2.txt  mesh_unit-square-iso_p3_dim2.txt  mesh_unit-square_p1_dim2.txt  mesh_unit-square_p2_dim2.txt  phonon_properties.txt  sweep_dim2_np24_gauss_na24_gauss.txt  sweep_dim2_tp16_gauss_ap24_gauss.txt  sweep_dim3_np24_gauss_na24_gauss.txt  sweep_dim3_tp16_gauss_ap24_gauss.txt  sweep_dim3_tp8_gauss_ap16_gauss.txt
output/temp_demo/Cycle000000/: data.pvtu
output/test_upwind_int/Cycle000000/: data.pvtu
output/vis/pbte_fields/Cycle000000/: data.pvtu  proc000000.vtu
output/vis/pbte_fields_parallel/Cycle000000/: data.pvtu  proc000000.vtu  proc000001.vtu  proc000002.vtu  proc000003.vtu
reference/: PolyIntegral.hpp  non_gray_smrt_params.txt  plot3D.ipynb
reference/DGSolver/: PBTE_NonGraySMRT.hpp
reference/PhononModel/: NonGraySMRT.hpp  NonGraySMRT_MPI.cpp  PhonoModel.hpp
scripts/: plot2d_contour.py
src/: AngularQuadrature.cpp  AngularSweepOrder.cpp  ElementIntegrator.cpp  MacroscopicQuantities.cpp  PBTESolver.cpp  PhononBTE.cpp  PhononProperties.cpp  SpatialMesh.cpp  Utils.cpp  dg_solver.cpp  main.cpp
temp_demo/Cycle000000/: proc000000.vtu
test_no_bc/Cycle000000/: proc000000.vtu
test_upwind_int/Cycle000000/: proc000000.vtu
